fix for blog image on smaller devices

--- a/themes/exchanges/scss/layouts/blog.scss
+++ b/themes/exchanges/scss/layouts/blog.scss
@@ -97,11 +97,16 @@
 }
 
 .post__image-small {
-	width: 35%;
-	padding-bottom: rem-calc(40);
-	float: right;
-	padding-right: 6.675rem;
-	padding-left: 1rem;
+	width: 100%;
+	display: block;
+	@media #{$large-up} {
+		width: 45%;
+		padding-bottom: rem-calc(40);
+		float: right;
+		padding-right: 6.675rem;
+		padding-left: 1rem;
+	}
+	
 }
 
 .blog-sidebar {
